[gd_scene load_steps=11 format=2]

[ext_resource path="res://Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://Twitch.gd" type="Script" id=2]
[ext_resource path="res://addons/godot-twicil/godot_twicil.gd" type="Script" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://ScoreBoard.tscn" type="PackedScene" id=5]
[ext_resource path="res://SuperLegendBoy-4w8Y.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 72
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 36
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="UI2" type="CanvasLayer" parent="."]
layer = -1

[node name="Label" type="Label" parent="UI2"]
margin_left = 232.0
margin_top = 3.0
margin_right = 1504.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 3 )
text = "Heitä Pallero Tsätissä komennolla !heitä <Suunta [90,-90]> <Voima [0,100]>
Esim. !heitä 45 92"
align = 1

[node name="LVLinfo" type="Label" parent="UI2"]
margin_left = 4.0
margin_top = 2.0
margin_right = 396.0
margin_bottom = 130.0
custom_fonts/font = SubResource( 5 )
text = "KENTÄN NIMI
borb"

[node name="Level" parent="." instance=ExtResource( 1 )]

[node name="Twitch" type="Node" parent="."]
script = ExtResource( 2 )

[node name="TwiCIL" type="Node" parent="Twitch"]
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreBoard" parent="UI" instance=ExtResource( 5 )]
margin_left = 5.0
margin_top = 232.0
margin_right = -1331.0

[node name="Label" type="Label" parent="UI/ScoreBoard"]
margin_left = 16.0
margin_top = -32.0
margin_right = 176.0
margin_bottom = -12.0
custom_fonts/font = SubResource( 3 )
text = "Pistetilanne"

[node name="PauseScreen" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.67451 )

[node name="Label" type="Label" parent="PauseScreen"]
margin_left = 432.0
margin_top = 192.0
margin_right = 1168.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 4 )
text = "Peli Paussilla!"

[node name="Continue" type="Label" parent="PauseScreen"]
margin_left = 408.0
margin_top = 400.0
margin_right = 1144.0
margin_bottom = 480.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
text = "Jatka"
align = 1

[node name="Spam" type="Label" parent="PauseScreen"]
margin_left = 408.0
margin_top = 608.0
margin_right = 1232.0
margin_bottom = 688.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
text = "Spämmi -  EI"
align = 1

[node name="Label3" type="Label" parent="PauseScreen"]
margin_left = 608.0
margin_top = 512.0
margin_right = 960.0
margin_bottom = 592.0
custom_fonts/font = SubResource( 4 )
text = "Kenttä"
align = 1

[node name="Previous" type="Label" parent="PauseScreen"]
margin_left = 513.0
margin_top = 512.0
margin_right = 609.0
margin_bottom = 592.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
text = "<"
align = 1

[node name="Next" type="Label" parent="PauseScreen"]
margin_left = 904.0
margin_top = 512.0
margin_right = 1112.0
margin_bottom = 592.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 4 )
text = ">"
align = 1

[node name="Reset" type="Label" parent="PauseScreen"]
margin_left = 416.0
margin_top = 800.0
margin_right = 1152.0
margin_bottom = 848.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 6 )
text = "Nollaa pisteet"
align = 1

[connection signal="gui_input" from="PauseScreen/Continue" to="." method="_on_Continue_gui_input"]
[connection signal="gui_input" from="PauseScreen/Spam" to="." method="_on_Spam_gui_input"]
[connection signal="gui_input" from="PauseScreen/Previous" to="." method="_on_Previous_gui_input"]
[connection signal="gui_input" from="PauseScreen/Next" to="." method="_on_Next_gui_input"]
[connection signal="gui_input" from="PauseScreen/Reset" to="." method="_on_Reset_gui_input"]
